--- a/takin-cloud-plugins/plugin-engine-module/pom.xml
+++ b/takin-cloud-plugins/plugin-engine-module/pom.xml
@@ -11,12 +11,22 @@
 
     <artifactId>plugin-engine-module</artifactId>
     <version>1.0.1</version>
-    <dependencies>
 
-        <dependency>
-            <groupId>io.shulie.takin</groupId>
-            <artifactId>takin-cloud-ext</artifactId>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.1.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
