--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <easypoi-base.version>4.3.0</easypoi-base.version>
         <easypoi-annotation.version>4.3.0</easypoi-annotation.version>
         <redisson.version>3.15.6</redisson.version>
-        <takin-plugin-framework-spring.version>1.0.1</takin-plugin-framework-spring.version>
+        <takin-plugin-framework-spring.version>1.0.3</takin-plugin-framework-spring.version>
     </properties>
 
     <modules>
@@ -70,10 +70,19 @@
 
     <dependencyManagement>
         <dependencies>
-<!--            <dependency>-->
-<!--                <groupId>org.mapstruct</groupId>-->
-<!--                <artifactId>mapstruct</artifactId>-->
-<!--            </dependency>-->
+
+            <dependency>
+                <groupId>io.shulie.takin.plugin.framework</groupId>
+                <artifactId>takin-plugin-framework-spring</artifactId>
+                <version>${takin-plugin-framework-spring.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>20.0</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
