--- a/takin-cloud-open/takin-cloud-open-api/pom.xml
+++ b/takin-cloud-open/takin-cloud-open-api/pom.xml
@@ -11,6 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>takin-cloud-open-api</artifactId>
+    <version>takin-cloud-open-2.0.2.1</version>
     <dependencies>
         <dependency>
             <groupId>io.shulie.takin</groupId>
