--- a/takin-cloud-ext/pom.xml
+++ b/takin-cloud-ext/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>takin-common-beans</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
