--- a/takin-cloud-data/pom.xml
+++ b/takin-cloud-data/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.shulie.takin</groupId>
         <artifactId>takin-cloud</artifactId>
-        <version>takin-cloud-5.0.1</version>
+        <version>takin-cloud-5.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
 
     </parent>
