--- a/takin-cloud-plugins/plugin-engine-module/src/main/resources/plugin.properties
+++ b/takin-cloud-plugins/plugin-engine-module/src/main/resources/plugin.properties
@@ -2,4 +2,4 @@ plugin.id=cloud-engine-plugin
 plugin.class=io.shulie.plugin.engine.EnginePlugin
 plugin.version=1.0.1
 plugin.provider=zhaoyong
-plugin.requires=takin-cloud-5.0.1
+plugin.requires=takin-cloud-5.0.1-SNAPSHOT
