--- a/takin-cloud-open/pom.xml
+++ b/takin-cloud-open/pom.xml
@@ -7,10 +7,13 @@
         <groupId>io.shulie.takin</groupId>
         <version>takin-cloud-5.0.0</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
     <artifactId>takin-cloud-open</artifactId>
+    <version>takin-cloud-open-5.0.0</version>
+
     <modules>
         <module>takin-cloud-open-api</module>
         <module>takin-cloud-open-client-starter</module>
