--- a/takin-cloud-open/takin-cloud-open-client-starter/pom.xml
+++ b/takin-cloud-open/takin-cloud-open-client-starter/pom.xml
@@ -3,15 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>takin-cloud</artifactId>
         <groupId>io.shulie.takin</groupId>
-        <version>takin-cloud-5.0.1-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <artifactId>takin-cloud-open</artifactId>
+        <version>takin-cloud-open-5.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>takin-cloud-open-client-starter</artifactId>
-    <version>takin-cloud-open-5.0.1-SNAPSHOT</version>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
