--- a/takin-cloud-bom/pom.xml
+++ b/takin-cloud-bom/pom.xml
@@ -44,19 +44,22 @@
             </dependency>
             <dependency>
                 <groupId>io.shulie.takin</groupId>
-                <artifactId>takin-cloud-open-entrypoint</artifactId>
-                <version>${takin.cloud.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.shulie.takin</groupId>
-                <artifactId>takin-cloud-web-entrypoint</artifactId>
-                <version>${takin.cloud.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.shulie.takin</groupId>
                 <artifactId>takin-cloud-biz-service</artifactId>
                 <version>${takin.cloud.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <distributionManagement>
+        <repository>
+            <id>${releases.id}</id>
+            <name>${releases.name}</name>
+            <url>${releases.url}</url>
+        </repository>
+        <snapshotRepository>
+            <id>${snapshots.id}</id>
+            <name>${snapshots.name}</name>
+            <url>${snapshots.url}</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
