--- a/pom.xml
+++ b/pom.xml
@@ -279,9 +279,9 @@
 
     <distributionManagement>
         <repository>
-            <id>${releases.id}</id>
+            <id>rdc-releases</id>
             <name>${releases.name}</name>
-            <url>${releases.url}</url>
+            <url>https://packages.aliyun.com/maven/repository/2101190-release-xxuvBf/</url>
         </repository>
         <snapshotRepository>
             <id>${snapshots.id}</id>
