--- a/takin-cloud-bom/pom.xml
+++ b/takin-cloud-bom/pom.xml
@@ -9,8 +9,8 @@
     <artifactId>takin-cloud-bom</artifactId>
 
     <properties>
-        <takin.cloud.version>takin-cloud-5.0.0</takin.cloud.version>
-        <takin.cloud.open.version>takin-cloud-open-5.0.0</takin.cloud.open.version>
+        <takin.cloud.version>takin-cloud-5.0.1</takin.cloud.version>
+        <takin.cloud.open.version>takin-cloud-open-5.0.1</takin.cloud.open.version>
     </properties>
 
     <dependencyManagement>
@@ -68,9 +68,9 @@
     <name>takin-cloud-bom</name>
     <distributionManagement>
         <repository>
-            <id>${releases.id}</id>
+            <id>rdc-releases</id>
             <name>${releases.name}</name>
-            <url>${releases.url}</url>
+            <url>https://packages.aliyun.com/maven/repository/2101190-release-xxuvBf/</url>
         </repository>
         <snapshotRepository>
             <id>${snapshots.id}</id>
