文件的租户隔离

--- a/takin-cloud-app/src/main/resources/application.properties
+++ b/takin-cloud-app/src/main/resources/application.properties
@@ -49,8 +49,9 @@ k8s.pod.jmeter.backendQueueCapacity=5000
 nfs.server: 192.168.1.110
 
 # 脚本文件配置
-script.temp.path=${data.path:/data}/scriptfile/temp
 script.path=${data.path:/data}/scriptfile
+script.temp.path=${script.path}/temp
+
 
 experience.guide.pdf.dir=${user.dir}/guide-docs
 
