脚本解析，脚本解析接口，文件MD5，json工具

--- a/takin-cloud-app/src/main/resources/exception/message.properties
+++ b/takin-cloud-app/src/main/resources/exception/message.properties
@@ -23,6 +23,11 @@ cloud-001-s0601=压测场景分配异常:${text}
 
 cloud-001-s0701=脚本校验异常:${text}
 
+cloud-001-s0800=脚本解析参数错误:${text}
+cloud-001-s0801=脚本文件不存在:${text}
+cloud-001-s0802=脚本解析失败:${text}
+
+
 #压测任务、压测报告模块 cloud-002-
 #0200+启动   0300+查询  0400+停止 0500+压测中
 cloud-002-s0200=任务启动校验异常:${text}
