--- a/takin-cloud-bom/pom.xml
+++ b/takin-cloud-bom/pom.xml
@@ -3,14 +3,14 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>io.shulie.takin</groupId>
-    <version>takin-cloud-5.0.2</version>
+    <version>takin-cloud-5.0.2-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <artifactId>takin-cloud-bom</artifactId>
 
     <properties>
-        <takin.cloud.version>takin-cloud-5.0.2</takin.cloud.version>
-        <takin.cloud.open.version>takin-cloud-open-5.0.0</takin.cloud.open.version>
+        <takin.cloud.version>takin-cloud-5.0.2-SNAPSHOT</takin.cloud.version>
+        <takin.cloud.open.version>takin-cloud-open-5.0.1-SNAPSHOT</takin.cloud.open.version>
     </properties>
 
     <dependencyManagement>
