--- a/takin-cloud-open/pom.xml
+++ b/takin-cloud-open/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <artifactId>takin-cloud</artifactId>
         <groupId>io.shulie.takin</groupId>
-        <version>takin-cloud-5.0.2</version>
+        <version>takin-cloud-5.0.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
     <artifactId>takin-cloud-open</artifactId>
-    <version>takin-cloud-open-5.0.0</version>
+    <version>takin-cloud-open-5.0.1-SNAPSHOT</version>
 
     <modules>
         <module>takin-cloud-open-api</module>
