压测场景接口 - 新
1. 控制器
2. 入参
3. Service

--- a/takin-cloud-biz-service/pom.xml
+++ b/takin-cloud-biz-service/pom.xml
@@ -21,6 +21,10 @@
         </dependency>
         <dependency>
             <groupId>io.shulie.takin</groupId>
+            <artifactId>takin-cloud-open-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.shulie.takin</groupId>
             <artifactId>takin-cloud-data</artifactId>
         </dependency>
         <dependency>
