--- a/takin-cloud-bom/pom.xml
+++ b/takin-cloud-bom/pom.xml
@@ -3,7 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>io.shulie.takin</groupId>
-    <version>takin-cloud-5.0.2-SNAPSHOT</version>
+    <version>takin-cloud-tenant-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
@@ -11,7 +11,7 @@
     <artifactId>takin-cloud-bom</artifactId>
 
     <properties>
-        <takin.cloud.version>takin-cloud-5.0.2-SNAPSHOT</takin.cloud.version>
+        <takin.cloud.version>takin-cloud-tenant-SNAPSHOT</takin.cloud.version>
         <takin.cloud.sdk.version>takin-cloud-sdk-5.0.0-SNAPSHOT</takin.cloud.sdk.version>
     </properties>
 
