--- a/takin-cloud-plugins/pom.xml
+++ b/takin-cloud-plugins/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>takin-cloud</artifactId>
         <groupId>io.shulie.takin</groupId>
-        <version>takin-cloud-5.0.2-SNAPSHOT</version>
+        <version>takin-cloud-tenant-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
