--- a/takin-cloud-sdk/pom.xml
+++ b/takin-cloud-sdk/pom.xml
@@ -12,7 +12,7 @@
 
     <name>takin-cloud-sdk</name>
     <artifactId>takin-cloud-sdk</artifactId>
-    <version>takin-cloud-sdk-5.0.0-SNAPSHOT</version>
+    <version>takin-cloud-sdk-tenant-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
