--- a/takin-cloud-common/pom.xml
+++ b/takin-cloud-common/pom.xml
@@ -107,6 +107,12 @@
             <artifactId>ant</artifactId>
             <version>1.10.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
