--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <!-- 3rd libs version -->
         <springfox.version>2.8.0</springfox.version>
         <commons-lang3.version>3.5</commons-lang3.version>
-        <spring.boot.version>2.1.5.RELEASE</spring.boot.version>
+        <spring.boot.version>2.5.6</spring.boot.version>
         <mysql-jdbc.version>8.0.19</mysql-jdbc.version>
         <druid.version>1.1.22</druid.version>
         <common-pools2.version>2.3</common-pools2.version>
@@ -36,7 +36,7 @@
         <ibmmqc.version>1.0.0</ibmmqc.version>
         <ibmmq.version>1.0</ibmmq.version>
         <spring.version>5.0.7.RELEASE</spring.version>
-        <mapstruct.version>1.3.1.Final</mapstruct.version>
+        <mapstruct.version>1.4.2.Final</mapstruct.version>
         <influxdb.version>2.15</influxdb.version>
         <jedis.version>3.1.0</jedis.version>
         <mybatis.plus.version>3.4.0</mybatis.plus.version>
@@ -45,7 +45,7 @@
 
         <flyway.version>5.2.4</flyway.version>
         <easypoi-base.version>4.3.0</easypoi-base.version>
-        <easypoi-annotation.version>4.3.0</easypoi-annotation.version>
+        <easypoi-annotation.version>4.4.0</easypoi-annotation.version>
         <redisson.version>3.15.6</redisson.version>
         <takin-plugin-framework-spring.version>1.0.3</takin-plugin-framework-spring.version>
     </properties>
@@ -185,7 +185,7 @@
             <dependency>
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-annotations</artifactId>
-                <version>1.5.21</version>
+                <version>1.6.3</version>
             </dependency>
             <dependency>
                 <groupId>io.swagger</groupId>
