--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,18 @@
         <developerConnection>https://github.com/shulieTech/Takin-cloud.git</developerConnection>
         <url>https://github.com/shulieTech/Takin-cloud.git</url>
     </scm>
+    <distributionManagement>
+        <repository>
+            <id>${releases.id}</id>
+            <name>${releases.name}</name>
+            <url>${releases.url}</url>
+        </repository>
+        <snapshotRepository>
+            <id>${snapshots.id}</id>
+            <name>${snapshots.name}</name>
+            <url>${snapshots.url}</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <profiles>
         <!-- 默认 -->
