--- a/takin-cloud-biz-service/pom.xml
+++ b/takin-cloud-biz-service/pom.xml
@@ -29,6 +29,10 @@
         </dependency>
         <dependency>
             <groupId>io.shulie.takin</groupId>
+            <artifactId>takin-cloud-sdk</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.shulie.takin</groupId>
             <artifactId>takin-cloud-ext</artifactId>
         </dependency>
         <dependency>
