--- a/takin-cloud-data/pom.xml
+++ b/takin-cloud-data/pom.xml
@@ -52,6 +52,10 @@
         </dependency>
         <dependency>
             <groupId>io.shulie.takin</groupId>
+            <artifactId>takin-cloud-sdk</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.shulie.takin</groupId>
             <artifactId>takin-common-beans</artifactId>
         </dependency>
         <dependency>
