--- a/takin-cloud-app/src/main/resources/exception/message.properties
+++ b/takin-cloud-app/src/main/resources/exception/message.properties
@@ -113,6 +113,7 @@ cloud-009-s0209=REDIS命令执行异常:${text}
 cloud-009-s0210=HTTP命令执行异常:${text}
 cloud-009-s0211=时间解析异常:${text}
 cloud-009-s0212=json处理失败:${text}
+cloud-009-s0213=没有找到插件:${text}
 
 cloud-009-s0300=复制文件失败:${text}
 cloud-009-s0301=读取文件失败:${text}
