修改脚本文件校验，修改报告趋势查询参数

--- a/takin-cloud-app/src/main/resources/exception/message.properties
+++ b/takin-cloud-app/src/main/resources/exception/message.properties
@@ -17,6 +17,7 @@ cloud-001-s0502=pod数量大于分片数量:${text}
 cloud-001-s0503=上传文件复制失败:${text}
 cloud-001-u0504=大文件上传校验失败:${text}
 cloud-001-u0505=大文件上传失败:${text}
+cloud-001-s0508=脚本文件校验失败:${text}
 
 cloud-001-s0600=引擎插件参数校验失败:${text}
 cloud-001-s0601=压测场景分配异常:${text}
