--- a/takin-cloud-plugins/plugin-engine-module/pom.xml
+++ b/takin-cloud-plugins/plugin-engine-module/pom.xml
@@ -12,6 +12,43 @@
     <artifactId>plugin-engine-module</artifactId>
     <version>1.0.2</version>
 
+    <!-- 运行main方法需要以下二方包 -->
+<!--    <properties>-->
+<!--        <slf4j.version>1.7.32</slf4j.version>-->
+<!--    </properties>-->
+<!--    <dependencies>-->
+<!--        <dependency>-->
+<!--            <groupId>org.dom4j</groupId>-->
+<!--            <artifactId>dom4j</artifactId>-->
+<!--            <version>2.1.3</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.shulie.takin</groupId>-->
+<!--            <artifactId>takin-cloud-common</artifactId>-->
+<!--            <version>takin-cloud-5.0.2-SNAPSHOT</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.shulie.takin</groupId>-->
+<!--            <artifactId>takin-cloud-ext</artifactId>-->
+<!--            <version>takin-cloud-5.0.2-SNAPSHOT</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.shulie.takin</groupId>-->
+<!--            <artifactId>takin-common-utils</artifactId>-->
+<!--            <version>common-1.7.5-SNAPSHOT</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-api</artifactId>-->
+<!--            <version>${slf4j.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>jaxen</groupId>-->
+<!--            <artifactId>jaxen</artifactId>-->
+<!--            <version>1.2.0</version>-->
+<!--        </dependency>-->
+<!--    </dependencies>-->
+
     <build>
         <plugins>
             <plugin>
