--- a/takin-cloud-sdk/pom.xml
+++ b/takin-cloud-sdk/pom.xml
@@ -19,6 +19,10 @@
             <groupId>io.shulie.takin</groupId>
             <artifactId>takin-cloud-ext</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.shulie.takin</groupId>
+            <artifactId>takin-cloud-common</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
