--- a/takin-cloud-common/pom.xml
+++ b/takin-cloud-common/pom.xml
@@ -10,7 +10,11 @@
     <artifactId>takin-cloud-common</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.owasp</groupId>
+            <artifactId>security-logging-logback</artifactId>
+            <version>1.1.7</version>
+        </dependency>
         <dependency>
             <groupId>io.shulie.takin</groupId>
             <artifactId>takin-cloud-ext</artifactId>
