--- a/takin-cloud-bom/pom.xml
+++ b/takin-cloud-bom/pom.xml
@@ -49,4 +49,21 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <url>https://github.com/shulieTech/Takin-cloud.git</url>
+    <description>takin-cloud</description>
+
+    <distributionManagement>
+        <repository>
+            <id>${releases.id}</id>
+            <name>${releases.name}</name>
+            <url>${releases.url}</url>
+        </repository>
+        <snapshotRepository>
+            <id>${snapshots.id}</id>
+            <name>${snapshots.name}</name>
+            <url>${snapshots.url}</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
