--- a/takin-cloud-entrypoint/pom.xml
+++ b/takin-cloud-entrypoint/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>takin-cloud</artifactId>
         <groupId>io.shulie.takin</groupId>
-        <version>takin-cloud-5.2.0-SNAPSHOT</version>
+        <version>takin-cloud-5.2.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -20,6 +20,10 @@
         <dependency>
             <groupId>io.shulie.takin</groupId>
             <artifactId>takin-cloud-biz-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.shulie.takin</groupId>
+            <artifactId>takin-cloud-sdk</artifactId>
         </dependency>
     </dependencies>
 </project>
