--- a/takin-cloud-app/src/main/resources/application.yml
+++ b/takin-cloud-app/src/main/resources/application.yml
@@ -11,7 +11,7 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:mysql://${resource.mysql.host:127.0.0.1}:${resource.mysql.port:3306}/trodb_cloud?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai"
+    url: "jdbc:mysql://${resource.mysql.host:127.0.0.1}:${resource.mysql.port:3306}/trodb_cloud?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true"
     username: root
     password: shulie@2020
     type: com.alibaba.druid.pool.DruidDataSource
