统一打包路径

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,8 @@
         <module>takin-cloud-entrypoint</module>
         <module>takin-cloud-ext</module>
         <module>takin-cloud-plugins</module>
+        <module>build</module>
+
     </modules>
 
 
