--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,12 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!--    version    -->
         <hutool.version>5.7.22</hutool.version>
+        <lombok.version>1.18.22</lombok.version>
+        <my-sql.version>8.0.28</my-sql.version>
+        <swagger.version>3.0.0</swagger.version>
         <spring.boot.version>2.6.6</spring.boot.version>
+        <mybatis-plus.version>3.5.1</mybatis-plus.version>
+        <junit-jupiter.version>5.8.2</junit-jupiter.version>
     </properties>
 
     <modules>
@@ -30,6 +35,32 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${my-sql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-boot-starter</artifactId>
+                <version>${swagger.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
