--- a/app/pom.xml
+++ b/app/pom.xml
@@ -59,11 +59,22 @@
     </dependencies>
 
     <build>
+        <finalName>takin-cloud-${project.artifactId}-${project.version}.jar</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.boot.version}</version>
+                <configuration>
+                    <mainClass>io.shulie.takin.cloud.app.Application</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
