--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 # \u670D\u52A1\u7AEF\u53E3\u914D\u7F6E
-server.port                         = 10010
+server.port                          = 10010
 # \u6570\u636E\u5E93\u914D\u7F6E
-spring.datasource.username          = root
-spring.datasource.password          = shulie@2020
-spring.datasource.url               = jdbc:mysql://192.168.1.129:3306/crank
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.username           = root
+spring.datasource.password           = shulie@2020
+spring.datasource.url                = jdbc:mysql://192.168.1.129:3306/crank
+spring.datasource.driver-class-name  = com.mysql.cj.jdbc.Driver
+#  \u6570\u636E\u5E93\u8FDE\u63A5\u6C60\u914D\u7F6E
+spring.datasource.druid.initial-size = 10
+spring.datasource.druid.max-active   = 20
 # Redis\u914D\u7F6E
 # suppress inspection "SpringBootApplicationProperties"
-spring.redis.redisson.file          = classpath:redisson.yaml
+spring.redis.redisson.file           = classpath:redisson.yaml
+# \u5176\u5B83\u914D\u7F6E
+mybatis-plus.global-config.banner    = false
