--- a/app/src/main/resources/watchman.properties
+++ b/app/src/main/resources/watchman.properties
@@ -1,3 +1,14 @@
-container.image = 192.168.1.119/library/pressure-engine:5.2.3-x
-nfs.server      = 192.168.1.225
-nfs.directory   = /data/share
+container.image         = 192.168.1.119/library/pressure-engine:5.2.3-x
+nfs.server              = 192.168.1.225
+nfs.directory           = /data/share
+zk.address              = 192.168.1.154:2181,192.168.1.154:2181,192.168.1.154:2181
+ptl.upload.from         = cloud
+ptl.file.enable         = true
+ptl.file.error.only     = false
+ptl.file.timeout.only   = false
+timeout.threshold       = 3000
+log.cut.off             = false
+log.queue.size          = 25000
+backend.queue.capacity  = 5000
+java.options            = -Xmx2048m -Xms2048m -XX:MaxMetaspaceSize=256m
+tps.target.level.factor = 1.1
