代码调整:去除jmeter概念

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.redis.redisson.file                                = classpath:redisson.y
 spring.influxdb.url                                       = http://192.168.1.129:8086
 spring.influxdb.user                                      = pradar
 spring.influxdb.password                                  = pradar
-spring.influxdb.database                                  = jmeter2
+spring.influxdb.database                                  = crank
 # \u5176\u5B83\u914D\u7F6E
 mybatis-plus.global-config.banner                         = false
 mybatis-plus.configuration.log-impl                       = org.apache.ibatis.logging.stdout.StdOutImpl
